# trie-match

./: .hlint.yaml  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  default.nix  flake.nix  trie-match.cabal
.github/workflows/: build.yml
app/: CLI.hs  Main.hs  Parse.hs  Pattern.hs  Trie.hs
demo/: README.md  demo.sh  pattern-source.json  query-source.json  result.json
doc/: matching.md
doc/matching-img/: Makefile  defs.m4  glob.dot  glob.smcat  match.dot  match.smcat  plus.dot  plus.smcat  simple-tree.dot  simple-tree.smcat  star.dot  star.smcat  xy.dot  xy.smcat
logo/: .gitignore  Makefile  gen-tree.hs
src/: CLI.hs  Options.hs  Parse.hs  Pattern.hs  Search.hs  Trie.hs
test/: test.hs
