cabal-version: 3.0
name:          trie-match
version:       0.2.0.1
license:       BSD-3-Clause
author:        Cédric Bamps
build-type:    Simple
tested-with:   GHC ==9.6.6 || ==9.8.4 || ==9.10.1

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:
    CLI
    Options
    Parse
    Pattern
    Search
    Trie

  build-depends:
    , base ^>=4.18.2 || ^>=4.19.2 || ^>=4.20.0
    , bytestring ^>=0.11.5 || ^>=0.12.1
    , containers ^>=0.6.7 || ^>=0.7
    , megaparsec ^>=9.5.0 || ^>=9.7.0
    , optparse-applicative ^>=0.18.1
    , recursion-schemes ^>=5.2.3
    , text ^>=2.0.2 || ^>=2.1.1

  hs-source-dirs:     src
  default-language:   GHC2021
  default-extensions:
    LambdaCase
    OverloadedStrings
    TypeFamilies

executable trie-match
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base ^>=4.18.2 || ^>=4.19.2 || ^>=4.20.0
    , trie-match

  hs-source-dirs:   app
  default-language: GHC2021

test-suite trie-match-test
  import:           warnings
  main-is:          test.hs
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:
    , base ^>=4.18.2 || ^>=4.19.2 || ^>=4.20.0
    , containers ^>=0.6.7 || ^>=0.7
    , trie-match
    , tasty ^>=1.4.3
    , tasty-hunit ^>=0.10.2
    , text ^>=2.0.2 || ^>=2.1.1

benchmark trie-match-bench
  import:           warnings
  main-is:          bench.hs
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  default-language: GHC2021
  build-depends:
    , base ^>=4.18.2 || ^>=4.19.2 || ^>=4.20.0
    , tasty-bench
    , trie-match
  -- recommended by tasty to reduce variance from GC (rtsopts) and from
  -- compiled alignment changes from changed code
  ghc-options: "-with-rtsopts=-A32m" -fproc-alignment=64
